javali_tests/A3/A4_keinestamSchmid/fail/Error.2.3.20.NOTASSIGNABLE.javali
// LHS of assign must be a non-assignable expression. (variable,field or array dereference)
// rule 2.3.20 

class Main {
	void main() {
		int x;
		x = 1;
		this = 2;
	}
}